Rework config-loader in terms of NIO
config-loader fails consistently in my Eclipse 'Debug as JUnit' setup.
The problem seems to be that it assumes the class path is based off of
normal directories, not upstream jars.

Change-Id: I39fa97a00f256fccb56ee9a40eebc9ac02d59ef5
Signed-off-by: Robert Varga <robert.varga@pantheon.tech>