@@ -17,7 +17,6 @@ import java.lang.ref.Cleaner;
 import java.lang.ref.Cleaner.Cleanable;
 import java.nio.file.FileSystems;
 import java.nio.file.Path;
-import java.nio.file.Paths;
 import java.nio.file.WatchService;
 import javax.annotation.PostConstruct;
 import javax.annotation.PreDestroy;
@@ -56,7 +55,7 @@ public final class DefaultFileWatcher extends AbstractRegistration implements Fi
 
     private static final Logger LOG = LoggerFactory.getLogger(DefaultFileWatcher.class);
     //BGPCEP config folder OS agnostic path
-    private static final Path PATH = Paths.get("etc","opendaylight","bgpcep");
+    private static final @NonNull Path PATH = Path.of("etc","opendaylight","bgpcep");
 
     private final State state;
     private final Cleanable cleanable;
@@ -67,8 +66,8 @@ public final class DefaultFileWatcher extends AbstractRegistration implements Fi
     }
 
     @Override
-    public String getPathFile() {
-        return PATH.toString();
+    public Path getPathFile() {
+        return PATH;
     }
 
     @Override
